# opensi-editor

./: .envrc  .gitattributes  .gitignore  .nvimrc  Cargo.toml  LICENSE  LICENSE-MIT  README.md  flake.nix  index.html  opensi-editor-3f23c573bb72990a.js  opensi-editor-42ade8cfa158c920.js  opensi-editor-6805f75e6d9efa18.js  opensi-editor-70f20505e65852f0.js  opensi-editor-c21dcdd5e05c268a.js  opensi-editor-c34d4ba4f3755d06.js  opensi-editor-e09d1afda500c11b.js  opensi-editor-fd2e190cbd1a290f.js  opensi-editor-fd2e190cbd1a290f_bg.wasm  rust-toolchain.toml  rustfmt.toml  sw.js
.github/workflows/: pages.yml  rust.yml
assets/: manifest.json
crates/opensi-core/: Cargo.toml
crates/opensi-core/src/: components.rs  lib.rs  node.rs  package.rs  package_trait.rs  serde_impl.rs  serde_utils.rs
crates/opensi-core/src/v4/: atom.rs  components.rs  mod.rs  package.rs
crates/opensi-core/src/v5/: components.rs  mod.rs  package.rs
crates/opensi-core/tests/: check_data.rs  test.rs
crates/opensi-core/tests/data/: ABOBA_1.siq  Dedushkiny_Bredni.siq  Lastovy_Bolshoy_Pak.siq  Obschie_Voprosy_Ot_Slavyan_Ch_1.siq  Poshla_Yobka.siq  Solyanka.siq  Solyanka_Dlya_Petushatni.siq  Solyanka_Namber_Sri.siq  WorldMain_1.siq  test-pack.siq
crates/opensi-editor/: Cargo.toml  Trunk.toml  index.html
crates/opensi-editor/src/: app.rs  card.rs  file_dialogs.rs  lib.rs  main.rs  package_tab.rs  package_tree.rs  question_tab.rs  round_tab.rs  theme_tab.rs  utils.rs  workarea.rs
crates/opensi-editor/src/app/: context.rs  file_dialogs.rs  files.rs  mod.rs  package_tab.rs  package_tree.rs  question_tab.rs  round_tab.rs  storage.rs  theme_tab.rs  workarea.rs
crates/opensi-editor/src/element/: card.rs  common.rs  mod.rs  modal.rs  naming.rs  node_context.rs  property.rs  section.rs
crates/opensi-editor/src/style/: catppuccin.rs  mod.rs  themes.rs
docs/: README.md  ygpackage3.1.html  ygpackage3.1.xsd  ygpackage5.xsd
docs/siq-specification/: index-all.html  index.html  overview-all.html  overview-namespaces.html  schema-summary.html  stylesheet.css
docs/siq-specification/http___vladimirkhil.com_ygpackage3.0.xsd/: index.html  overview-namespace.html
docs/siq-specification/http___vladimirkhil.com_ygpackage3.0.xsd/complexType/: infoType.authors.html  infoType.html  infoType.sources.html
docs/siq-specification/http___vladimirkhil.com_ygpackage3.0.xsd/element/: package.html  package.rounds.html  package.rounds.round.html  package.rounds.round.themes.html  package.rounds.round.themes.theme.html  package.rounds.round.themes.theme.questions.html  package.rounds.round.themes.theme.questions.question.html  package.rounds.round.themes.theme.questions.question.right.html  package.rounds.round.themes.theme.questions.question.scenario.atom.html  package.rounds.round.themes.theme.questions.question.scenario.html  package.rounds.round.themes.theme.questions.question.type.html  package.rounds.round.themes.theme.questions.question.type.param.html  package.rounds.round.themes.theme.questions.question.wrong.html  package.tags.html
opensi/: Cargo.toml
opensi-client/: Cargo.toml
opensi-client/src/: main.rs
opensi-editor/: Cargo.toml
opensi-editor/src/: editor.ui  main.rs
opensi/src/: lib.rs
resource/: account.frag  account.vert  button.frag  button.vert  client.css
src/: core.rs  lib.rs  main.rs  main_menu.rs  package.rs  state.rs
src/client/: main.glade  main.rs
src/core/: lib.rs
src/editor/: editor.ui  main.rs
src/state/: mod.rs
tests/: test.rs
