[package]
name = "opensi"
version = "0.1.0"
authors = ["barsoosayque <shtoshich@gmail.com>", "snpefk <snpefk@gmail.com>"]
edition = "2018"

[lib]
name = "core"
path = "src/core/lib.rs"

[[bin]]
name = "editor"
path = "src/editor/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"


[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
quick-xml = { version = "0.17", features = [ "serialize" ] }
zip = "0.5.4"

gtk = "^0.8.0"
relm = "^0.19.0"
relm-derive = "^0.19.0"

percent-encoding = "2.1.0"