[workspace]
resolver = "2"
members = [
    "crates/opensi-core",
    "crates/opensi-editor"
]

[workspace.package]
authors = ["barsoosayque <shtoshich@gmail.com>", "snpefk <snpefk@gmail.com>"]
edition = "2021"
license = "MIT"
rust-version = "1.76"
version = "0.1.0"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

