[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["barsoosayque <shtoshich@gmail.com>", "snpefk <snpefk@gmail.com>"]
edition = "2021"
license = "MIT"
version = "0.1.0"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

