[package]
name = "opensi"
version = "0.1.0"
authors = ["barsoosayque <shtoshich@gmail.com>", "snpefk <snpefk@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
quick-xml = { version = "0.17", features = [ "serialize" ] }
zip = "0.5.4"
percent-encoding = "2.1.0"
