[package]
name = "opensi-core"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
quick-xml = { version = "0.37.2", features = ["serialize"] }
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }
percent-encoding = "2.3.1"
derive_more = { version = "1.0.0", default-features = false, features = [ "from", "as_ref", "deref" ] }
uuid = { version = "1.12.1", features = [ "v4", "fast-rng", "js" ] }
chrono = { version = "0.4.39", features = [ "now", "alloc", "wasmbind" ] }
