[package]
name = "opensi-editor"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
opensi-core = { version = "*", path = "../opensi-core" }

egui = "0.29"
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
rfd = "0.14.1"
thiserror = "1.0.64"
serde = { version = "1", features = ["derive"] }
egui_extras = "0.29.0"
itertools = "0.13.0"
egui-modal = "0.5.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
dirs = "5.0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tokio_with_wasm = { version = "0.6.1", features = ["macros", "rt", "sync"] }
web-sys = "0.3.70" # to access the DOM (to hide the loading text)
