[package]
name = "opensi-editor"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Open-source editor for the popular TV game"
homepage = "opensi.github.io/opensi-editor"
repository = "https://github.com/opensi/opensi-editor"

[features]
default = ["x11", "wayland"]
x11 = ["eframe/x11"]
wayland = ["eframe/wayland"]

[dependencies]
opensi-core = { version = "*", path = "../opensi-core" }

egui = "0.30"
eframe = { version = "0.30", default-features = false, features = [
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
rfd = "0.15.2"
thiserror = "2.0.11"
serde = { version = "1", features = ["derive"] }
egui_extras = "0.30.0"
itertools = "0.14.0"
egui-modal = "0.6.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
dirs = "6.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tokio_with_wasm = { version = "0.7.4", features = ["macros", "rt", "sync"] }
web-sys = "0.3.77" # to access the DOM (to hide the loading text)
