[package]
name = "opensi-editor"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Open-source editor for the popular TV game"
homepage = "opensi.github.io/opensi-editor"
repository = "https://github.com/opensi/opensi-editor"

[features]
default = ["x11", "wayland"]
x11 = ["eframe/x11"]
wayland = ["eframe/wayland"]

[dependencies]
opensi-core = { version = "*", path = "../opensi-core" }

egui = "0.31"
eframe = { version = "0.31", default-features = false, features = [
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui-phosphor = { version = "0.9", default-features = false, features = ["fill"] }
egui_extras = { version = "0.31.0", features = ["image"] }
image = { version = "0.25", features = ["jpeg", "png"] }
rfd = { version = "0.15.2", default-features = false, features = ["xdg-portal", "tokio"] }
thiserror = "2.0.11"
serde = { version = "1", features = ["derive"] }
itertools = "0.14.0"
const_format = "0.2.34"
bincode = "1.3.3"
log = "0.4"
dashmap = "6.1.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "6.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
humantime = "2.1.0"
fern = { version = "0.7.1", features = ["colored"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tokio_with_wasm = { version = "0.7.4", features = ["macros", "rt", "sync"] }
web-sys = "0.3.77" # to access the DOM (to hide the loading text)
fern = { version = "0.7.1" }
